RESOLVED FIXED181212
Memory cache should not reuse resources with different credential fetch option
https://bugs.webkit.org/show_bug.cgi?id=181212
Summary Memory cache should not reuse resources with different credential fetch option
youenn fablet
Reported 2018-01-02 08:33:15 PST
Memory cache should not reuse resources with different credential fetch option
Attachments
Patch (3.70 KB, patch)
2018-01-02 08:38 PST, youenn fablet
no flags
Patch (5.66 KB, patch)
2018-01-02 08:40 PST, youenn fablet
no flags
youenn fablet
Comment 1 2018-01-02 08:38:03 PST
youenn fablet
Comment 2 2018-01-02 08:40:09 PST
WebKit Commit Bot
Comment 3 2018-01-02 12:38:07 PST
Comment on attachment 330319 [details] Patch Clearing flags on attachment: 330319 Committed r226333: <https://trac.webkit.org/changeset/226333>
WebKit Commit Bot
Comment 4 2018-01-02 12:38:10 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5 2018-01-02 13:18:06 PST
Note You need to log in before you can comment on or make changes to this bug.