Memory cache should not reuse resources with different credential fetch option https://bugs.webkit.org/show_bug.cgi?id=181212

Patch by Youenn Fablet <youenn@apple.com> on 2018-01-02
Reviewed by Alex Christensen.

LayoutTests/imported/w3c:

* web-platform-tests/service-workers/service-worker/fetch-cors-xhr.https-expected.txt:

Source/WebCore:

Covered by rebased test.

* loader/cache/CachedResourceLoader.cpp:
(WebCore::CachedResourceLoader::determineRevalidationPolicy const):

LayoutTests:

* TestExpectations: Removing test flakiness expectation.

Canonical link: https://commits.webkit.org/197057@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@226333 268f45cc-cd09-0410-ab3c-d52691b4dbfc